--- a/src/data/siteConfig.json
+++ b/src/data/siteConfig.json
@@ -1,6 +1,11 @@
 {
   "domain": "https://onlyfanleaks.fr",
   "siteName": "OnlyFanLeaks",
-  "defaultLanguage": "fr"
+  "defaultLanguage": "fr",
+  "affiliateLinks": {
+    "step1": "https://t.crjmpy.com/345641/7903?bo=2753,2754,2755,2756&aff_sub5=SF_006OG000004lmDN",
+    "step2": "https://t.crjmpy.com/345641/7852?bo=2753,2754,2755,2756&aff_sub5=SF_006OG000004lmDN",
+    "default": "https://t.crjmpy.com/345641/7852?bo=2753,2754,2755,2756&aff_sub5=SF_006OG000004lmDN"
+  }
 }
 
