--- a/src/data/siteConfig.json
+++ b/src/data/siteConfig.json
@@ -2,6 +2,7 @@
   "domain": "https://onlyfanleaks.fr",
   "siteName": "OnlyFanLeaks",
   "defaultLanguage": "fr",
+  "telegramLink": "https://t.me/+Wt1uqv1xGetjYzc0",
   "affiliateLinks": {
     "step1": {
       "url": "https://t.crjmpy.com/345641/7903?bo=2753,2754,2755,2756&aff_sub5=SF_006OG000004lmDN",
