--- a/src/data/siteConfig.json
+++ b/src/data/siteConfig.json
@@ -1,18 +1,18 @@
 {
-  "domain": "https://onlyfanleaks.fr",
+  "domain": "https://onlyfanleaks.de",
   "siteName": "OnlyFanLeaks",
-  "defaultLanguage": "fr",
-  "telegramLink": "https://t.me/+Wt1uqv1xGetjYzc0",
+  "defaultLanguage": "de",
+  "telegramLink": "https://t.me/+bv_jyiaxJ0A0YTU0",
   "affiliateLinks": {
     "step1": {
-      "url": "https://t.crjmpy.com/345641/7903?bo=2753,2754,2755,2756&aff_sub5=SF_006OG000004lmDN",
-      "siteName": "Voisins Solitaires",
-      "logo": "/step1.svg"
+      "url": "https://t.crjmpy.com/345641/7964?bo=2753,2754,2755,2756&aff_sub5=SF_006OG000004lmDN",
+      "siteName": "Real Sex Club",
+      "logo": "/step1.png"
     },
     "step2": {
-      "url": "https://t.crjmpy.com/345641/7852?bo=2753,2754,2755,2756&aff_sub5=SF_006OG000004lmDN",
-      "siteName": "Be Coquin",
-      "logo": "/step2.svg"
+      "url": "https://t.crjmpy.com/345641/7346?bo=2753,2754,2755,2756&aff_sub5=SF_006OG000004lmDN",
+      "siteName": "Fuck Finder",
+      "logo": "/step2.png"
     }
   }
 }
